--- a/views/main.ejs
+++ b/views/main.ejs
@@ -89,10 +89,10 @@
         <div class="fill" style="background-image:url('/img/repositoryback1.png');"></div>
         <div class="carousel-caption">
           <div class="repoName">
-            <%= repositories[0].repoName %>
+            <h1><%= repositories[0].repoName %></h1>
           </div>
           <div class="description">
-            <%= repositories[0].description %>
+            <h2><%= repositories[0].description %></h2>
           </div>
         </div>
       </div>
@@ -102,10 +102,10 @@
           <div class="fill" style="background-image:url('/img/repositoryback2.png');"></div>
           <div class="carousel-caption">
             <div class="repoName">
-              <%= repositories[i].repoName %>
+              <h1><%= repositories[i].repoName %></h1>
             </div>
             <div class="description">
-              <%= repositories[i].description %>
+              <h2><%= repositories[i].description %></h2>
             </div>
           </div>
         </div>
